project/stage/semantic_tests/reject/bad_return_type2.ul
void main() {
}

int foo(float b) {
    return b;
}
